// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextResponseEditor /> render Rich Text Editor  1`] = `
<div
  className="mt-2"
>
  <RichTextEditor
    disabled={true}
    onChange={[MockFunction onChange]}
    value="value"
  />
</div>
`;

exports[`<TextResponseEditor /> render Text Editor  1`] = `
<div
  className="mt-2"
>
  <TextEditor
    disabled={false}
    onChange={[MockFunction onChange]}
    optional={false}
    value="value"
  />
</div>
`;
